hphp/test/slow/use_function/override.php.expectf

Fatal error: Cannot use function foo\bar as bar because the name is already in use in %s/override.php on line 16
